<resources>
    <string name="app_name">PillPall</string>
    <string name="title_home">Home</string>
    <string name="title_medications">Medications</string>
    <string name="title_vitals">Vitals</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="image_description">Bell-active/inactive</string>
    <string name="profile">Profile</string>
    <string name="add_patient">Add Patient</string>
    <string name="fragment_add_vital">Add Vital</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="heart_rate">Heart rate</string>
    <string name="temperature">Temperature</string>
    <string name="respiratory_rate">Respiratory rate</string>
    <string name="oxygen_saturation">Oxygen Saturation</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="blood_glucose">Blood glucose</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="add_vitals_tittle">What would you like to track?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_starting_date">Change starting Date</string>
    <string name="change_starting_time">Change starting Time</string>
    <string name="quantity">Quantity</string>
    <string name="confirm">Confirm</string>
    <string name="medication">Medication</string>
    <string name="frequency">Frequency</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>