<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VitalsFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_vitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/image_icon_vitals_item"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/blood_pressure"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_height" />

    <Button
        android:id="@+id/button_heartRate"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:text="@string/heart_rate"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button_respiratoryRate"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@+id/button_oxygenSaturation"
        app:layout_constraintTop_toBottomOf="@+id/button_bloodGlucose" />

    <Button
        android:id="@+id/button_temperature"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/temperature"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bmi" />

    <Button
        android:id="@+id/button_respiratoryRate"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/respiratory_rate"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_icon_vitals_item" />

    <Button
        android:id="@+id/button_oxygenSaturation"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/oxygen_saturation"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_temperature" />

    <Button
        android:id="@+id/button_weight"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:text="@string/weight"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button_height"
        app:layout_constraintStart_toEndOf="@+id/button_bmi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_height"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/height"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bmi"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/bmi"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bloodGlucose"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/blood_glucose"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/image_icon_vitals_item"
        app:layout_constraintStart_toEndOf="@+id/button_temperature"
        app:layout_constraintTop_toBottomOf="@+id/button_weight" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_vitals"
        android:layout_width="409dp"
        android:layout_height="435dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_heartRate"
        app:layout_constraintVertical_bias="0.5
" />

</androidx.constraintlayout.widget.ConstraintLayout>